# SpincoaterGUI

./: lv_conf.h
libraries/TFT_eSPI/: User_Setup.h
libraries/ui/src/: filelist.txt  ui.c  ui_Screen1.c  ui_Screen2.c  ui_events.c  ui_font_Font_20.c  ui_font_Font_24.c  ui_img_789391261.c  ui_img_speedbg_png.c  ui_img_speedfg_png.c
ui/: PreferenceHelper.cpp  PreferenceHelper.h  ui.ino  uiFunctions.h
ui/src/: CMakeLists.txt  ui.h  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c  ui_comp_hook.c  ui_events.h  ui_font_Display_16.c  ui_font_Font_10.c  ui_font_Font_12.c  ui_font_Font_30.c  ui_font_Font_8.c  ui_helpers.c  ui_helpers.h  ui_img_1601502596.c  ui_img_1798728470.c  ui_img_942215904.c
