SET(SOURCES ui_Screen1.c
    ui_Screen2.c
    ui_Screen3.c
    ui_Screen4.c
    ui_Screen5.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    ui_img_789391261.c
    ui_img_speedbg_png.c
    ui_img_speedfg_png.c
    ui_img_942215904.c
    ui_img_1601502596.c
    ui_img_1798728470.c
    fonts/ui_font_Display_16.c
    fonts/ui_font_Font_10.c
    fonts/ui_font_Font_12.c
    fonts/ui_font_Font_20.c
    fonts/ui_font_Font_24.c
    fonts/ui_font_Font_30.c
    fonts/ui_font_Font_8.c)

add_library(ui ${SOURCES})
